--- a/photo.html
+++ b/photo.html
@@ -5,11 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/css/app.css" />
-		<title>Croissant</title>
+		<title>Photo</title>
 	</head>
 	<body>
-		<h1>Hello world</h1>
-		<a href="/photo.html">Photo</a>
-		<a href="/contact.html">Contact</a>
+		<h1>Photo</h1>
+		<a href="/">Return to homepage</a>
 	</body>
 </html>
