--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 			named for its historical crescent shape. Croissants and other viennoiserie
 			are made of a layered yeast-leavened dough
 		</p>
-		<a href="/">Homepage</a>
-		<a href="/photo.html">Photo</a>
-		<a href="/contact.html">Contact</a>
+		<div class="homepage-links">
+			<a href="/">Homepage</a>
+			<a href="/photo.html">Photo</a>
+			<a href="/contact.html">Contact</a>
+		</div>
 	</body>
 </html>
