--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<title>Croissant</title>
 	</head>
 	<body>
-		<h1>🥐 Croissant</h1>
-		<p>
+		<h1 class="mb-4">🥐 Croissant</h1>
+		<p class="mb-4">
 			A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
 			named for its historical crescent shape. Croissants and other viennoiserie
 			are made of a layered yeast-leavened dough
