--- a/photo.html
+++ b/photo.html
@@ -4,17 +4,27 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/css/app.css" />
+
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="/css/app.css" />
 		<title>Photo</title>
 	</head>
 	<body>
-		<h1>Photo</h1>
-		<a href="/">Return to homepage</a>
+		<h1 class="mb-3">🥐 A picture of a croissant</h1>
+		<img
+			src="/images/croissant.jpeg"
+			alt=""
+			class="w-100 border rounded shadow"
+		/>
+		<div class="homepage-links mt-3">
+			<a href="/">Homepage</a>
+			<a href="/photo.html">Photo</a>
+			<a href="/contact.html">Contact</a>
+		</div>
 	</body>
 </html>
