Added text, links and styling to contact page

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,16 @@
 		<title>Contact</title>
 	</head>
 	<body>
-		<h1>Contact</h1>
-		<a href="/">Return to homepage</a>
+		<h1>🥐 Contact us</h1>
+		<p>
+			To contact croissant.com, please email us at
+			<a href="mailto:/hello@croissant.com">hello@croissant.com</a> for more
+			info
+		</p>
+		<div class="homepage-links mt-3">
+			<a href="/">Homepage</a>
+			<a href="/photo.html">Photo</a>
+			<a href="/contact.html">Contact</a>
+		</div>
 	</body>
 </html>
