--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="How to contact us to find out more info about croissants."
+		/>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -12,7 +16,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="/css/app.css" />
-		<title>Contact</title>
+		<title>Contact Us - Croissant.com</title>
 	</head>
 	<body>
 		<h1>🥐 Contact us</h1>
@@ -21,10 +25,10 @@
 			<a href="mailto:/hello@croissant.com">hello@croissant.com</a> for more
 			info
 		</p>
-		<div class="homepage-links mt-3">
-			<a href="/">Homepage</a>
-			<a href="/photo.html">Photo</a>
-			<a href="/contact.html">Contact</a>
+		<div class="homepage-links">
+			<a href="/">Back to homepage</a>
+			<a href="/photo.html">See photo gallery</a>
+			<a href="/contact.html">Contact us</a>
 		</div>
 	</body>
 </html>
