--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Where people who love croissants can order the best croissants in the world "
+		/>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -11,19 +15,19 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="/css/app.css" />
-		<title>Croissant</title>
+		<title>Croissant homepage - Croissant.com</title>
 	</head>
 	<body>
-		<h1 class="mb-4">🥐 Croissant</h1>
+		<h1 class="mb-4">🥐 Croissant Facts</h1>
 		<p class="mb-4">
 			A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
 			named for its historical crescent shape. Croissants and other viennoiserie
 			are made of a layered yeast-leavened dough
 		</p>
 		<div class="homepage-links">
-			<a href="/">Homepage</a>
-			<a href="/photo.html">Photo</a>
-			<a href="/contact.html">Contact</a>
+			<a href="/">Link to homepage</a>
+			<a href="/photo.html">See photo gallery</a>
+			<a href="/contact.html">Contact us</a>
 		</div>
 	</body>
 </html>
