--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+		<meta
+			name="description"
+			content="A gallery of croissant photos and artwork."
+		/>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -12,19 +15,19 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="/css/app.css" />
-		<title>Photo</title>
+		<title>Croissant photo gallery - Croissant.com</title>
 	</head>
 	<body>
 		<h1 class="mb-3">🥐 A picture of a croissant</h1>
 		<img
 			src="/images/croissant.jpeg"
-			alt=""
+			alt="Three croissants on a plate"
 			class="w-100 border rounded shadow"
 		/>
-		<div class="homepage-links mt-3">
-			<a href="/">Homepage</a>
-			<a href="/photo.html">Photo</a>
-			<a href="/contact.html">Contact</a>
+		<div class="homepage-links">
+			<a href="/">Back to homepage</a>
+			<a href="/photo.html">See photo gallery</a>
+			<a href="/contact.html">Contact us</a>
 		</div>
 	</body>
 </html>
